[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/SceneSwitcher.gd" type="Script" id=2]
[ext_resource path="res://Levels/PlayerStats.gd" type="Script" id=3]
[ext_resource path="res://Assets/Other/HealthBar_Over.png" type="Texture" id=4]
[ext_resource path="res://Assets/Other/HealthBar_Progress.png" type="Texture" id=5]
[ext_resource path="res://Assets/Other/HealthBar_Under.png" type="Texture" id=6]
[ext_resource path="res://Assets/Items/Fruits/Apple.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneSwitcher" type="Node"]
script = ExtResource( 2 )

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="Overlay" type="ColorRect" parent="OverlayLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Level1" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 1 )
anims/fadeOut = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerStats" type="Node" parent="CanvasLayer"]
script = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer/PlayerStats"]
margin_right = 90.0
margin_bottom = 50.0
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.227451, 0.45098, 0.101961, 1 )

[node name="EnergyBar" type="TextureProgress" parent="CanvasLayer/PlayerStats"]
margin_top = 41.0
margin_right = 90.0
margin_bottom = 91.0
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.807843, 0.45098, 0.0352941, 1 )

[node name="ApplesBar" type="Sprite" parent="CanvasLayer/PlayerStats"]
position = Vector2( 413, -80 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple1" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -301, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple2" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -285, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple3" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -269, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple4" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -253, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple5" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -237, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Apple6" type="Sprite" parent="CanvasLayer/PlayerStats/ApplesBar" groups=["appleBar"]]
position = Vector2( -221, 96 )
texture = ExtResource( 7 )
hframes = 17
region_rect = Rect2( 0, 0, 32, 32 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
